Fix: product-page
Change-Id: I6b84a737912676bad088b6544765eceb556c16fb

Former-commit-id: 090a4b9fda579e6ab77ac864c73166176c79391f

--- a/backend/src/main/resources/static/index.html
+++ b/backend/src/main/resources/static/index.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>eureka</title>
-</head>
-<body>
-    <h3>hello</h3>
-    <a href="http://j10e101.p.ssafy.io:8000/swagger-ui/index.html">swagger-ui</a>
-</body>
-</html>
+version https://git-lfs.github.com/spec/v1
+oid sha256:fa6ec113416f3efc1f2a3c0190e2b851a1b33706c1e36dddd01d2726a6a15cfe
+size 224
