--- a/frontend-web/index.html
+++ b/frontend-web/index.html
@@ -1,13 +1,3 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+version https://git-lfs.github.com/spec/v1
+oid sha256:cb1efc0b3c9a3ea25cd92f9ccce52b8c2789f01da0e802ff91b84007e09c4910
+size 401
